# NoSpherA2

./: .gitignore  CMakeLists.txt  makefile
Linux/: Makefile
